# catalert

./: .gitignore  README.md  abstractshelter.py  catalert.bat  catalert.py  pyproject.toml  shelters.py  utils.py
data/hamburger_tierschutzverein/: cats.yaml
data/tierheim_albert_schweitzer_bonn/: cats.yaml
data/tierheim_karlsruhe/: cats.yaml
data/tierheim_koeln_dellbrueck/: cats.yaml
data/tierheim_ludwigshafen/: cats.yaml
data/tierheim_mainz/: cats.yaml
data/tierheim_mannheim/: cats.yaml
data/tierheim_saarbruecken/: cats.yaml
data/tierheim_stendal-borstel/: cats.yaml
data/tierschutz_osnabrueck/: cats.yaml
data/tierschutzverein_heilbronn/: cats.yaml
data/tierschutzverein_muenchen/: cats.yaml
data/tierschutzverein_reutlingen/: cats.yaml
logs/: error.txt  log.txt
