[tool.poetry]
name = "catalert"
version = "0.1.0"
description = "Alert for new cats up for adoption"
authors = ["Bileam Scheuvens <36153336+bileamScheuvens@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
python-telegram-bot = "^20.6"
pyyaml = "^6.0.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
